add the css style type to the first screen

--- a/Screen1.html
+++ b/Screen1.html
@@ -17,7 +17,7 @@
         <input type="text" name="datetime"><br>
         Number of pizzas being ordered:<br>
         <input type="text" name="pizzasordered"><br>
-        <input type="submit" value="Save">
+        <input type="submit" value="Order Pizza>
       </form>
       
 
