--- a/Screen1.html
+++ b/Screen1.html
@@ -2,6 +2,7 @@
 
 <html>
 <script src="https://code.angularjs.org/1.2.1/angular.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <div class="container" ng-app="PizzasApp">
     <div class="form-area" ng-controller="OrdersController">
 
@@ -13,47 +14,61 @@
             <h1>Ace Of Spades Pizza</h1>
             <section class="contact-wrap">
             <form name="inquiryForm" novalidate>
-                <div>
+                <div class="col-sm-10">
                     <label for="name">First name:</label>
-                    <input type="text" name="firstname" maxlength="30" ng-pattern="first_name" ng-model="firstname" ng-required="true">
-                    <span class="red-text" ng-if="inquiryForm.firstname.$error.required && 
-                  inquiryForm.firstname.$dirty">First name is a required field</span>
+                    <input type="text" name="firstname" maxlength="30"
+                           ng-pattern="first_name" ng-model="firstname" ng-required="true"  class="form-control">
+                  <span class="red-text" 
+                          ng-if="inquiryForm.firstname.$error.required && 
+                          inquiryForm.firstname.$dirty">First name is a 
+                          required field</span>
                     <span class="red-text" ng-show="inquiryForm.firstname.$error.pattern">
-                        Only characters</span>
+                      Only characters</span>
+
                 </div>
 
-                <div>
+                <div class="col-sm-10">
                     <label for="name">Last name:</label>
-                    <input type="text" name="lastname" maxlength="50" ng-pattern="last_name" ng-model="lastname" ng-required="true">
-                    <span class="red-text" ng-if="inquiryForm.lastname.$error.required && 
-                  inquiryForm.lastname.$dirty">Last name is a required field</span>
+                    <input type="text" name="lastname" maxlength="50"
+                           ng-pattern="last_name" ng-model="lastname" ng-required="true"  class="form-control">
+                  <span class="red-text" 
+                          ng-if="inquiryForm.lastname.$error.required && 
+                          inquiryForm.lastname.$dirty">Last name is a 
+                          required field</span>
                     <span class="red-text" ng-show="inquiryForm.lastname.$error.pattern">
-                        Only characters</span>
-
+                      Only characters</span>
                 </div>
 
-                <div>
+                <div class="col-sm-10">
                     <label for="name">Phone number:</label>
-                    <input type="text" name="contact" maxlength="10" ng-pattern="ph_numbr" ng-model="contact" id="c_num" ng-required="true" class="form-control">
-
-                    <span class="red-text" ng-if="inquiryForm.contact.$error.required && 
-                  inquiryForm.contact.$dirty">Contact number is a required field</span>
+                    <input type="text" name="contact" maxlength="10" 
+                           ng-pattern="ph_numbr" ng-model="contact" id="c_num" 
+                           ng-required="true"  class="form-control">
+                  
+                    <span class="red-text" 
+                          ng-if="inquiryForm.contact.$error.required && 
+                          inquiryForm.contact.$dirty">Contact number is a 
+                          required field</span>
                     <span class="red-text" ng-show="inquiryForm.contact.$error.pattern">
-                        Please enter a 10 digit number</span>
+                      Please enter a 10 digit number</span>
                 </div>
-                <div>
-                    <label for="name">pizza delivered:</label>
-                    <input id="today" type="date">
-                </div>
-
-                <div>
-                    <label for="name">number of pizzas:</label>
-                    <input id="pizzasordered" type="number" value="1" max="10" min="1" onKeyDown="return false;  " />
+                
+                <div class="col-sm-10">
+                    <label for="name">Pizza delivered:</label>
+                    <input   id="today" type="date"  class="form-control" >
                 </div>
 
-                <div>
-                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" ng-disabled="inquiryForm.$invalid">Order Pizza</button>
+                <div class="col-sm-10">
+                    <label for="name">Number of pizzas:</label>
+                    <input id="pizzasordered" type="number" value="1" max="10" 
+                           min="1" class="form-control" onKeyDown="return false;"/>
                 </div>
+
+                <div class="col-sm-10">
+                    <button  type="button" id="submit" name="submit" 
+                            class="btn btn-primary pull-left" 
+                            ng-disabled="inquiryForm.$invalid">Order Pizza</button>
+                <div/>
             </form>
         </section>
         </body>
