--- a/Screen1.html
+++ b/Screen1.html
@@ -1,78 +1,66 @@
-<!DOCTYPE html>
-
 <html>
-<script src="https://code.angularjs.org/1.2.1/angular.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://code.angularjs.org/1.7.0/angular.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+
 <div class="container" ng-app="PizzasApp">
     <div class="form-area" ng-controller="OrdersController">
 
         <head>
             <link rel="stylesheet" type="text/css" href="style.css">
         </head>
-        <body>
-            <title>Ace Of Spades Pizza</title>
-            <h1>Ace Of Spades Pizza</h1>
+        <title>Ace Of Spades Pizza</title>
+
+        <body id="bodyOrders">
+            <h1 align="center">Ace Of Spades Pizza</h1>
+
             <section class="contact-wrap">
-            <form name="inquiryForm" novalidate>
-                <div class="col-sm-10">
-                    <label for="name">First name:</label>
-                    <input type="text" name="firstname" maxlength="30"
-                           ng-pattern="first_name" ng-model="firstname" ng-required="true"  class="form-control">
-                  <span class="red-text" 
-                          ng-if="inquiryForm.firstname.$error.required && 
-                          inquiryForm.firstname.$dirty">First name is a 
-                          required field</span>
-                    <span class="red-text" ng-show="inquiryForm.firstname.$error.pattern">
-                      Only characters</span>
+                <form class="contact-form" ng-submit="newOrder()" name="inquiryForm" novalidate>
 
-                </div>
+                    <div class="col-sm-10">
+                        <label for="name">First name:</label>
+                        <input type="text" name="firstname" maxlength="30" ng-pattern="first_name" ng-model="firstname" ng-required="true" class="form-control">
+                        <span class="red-text" ng-if="inquiryForm.firstname.$error.required && 
+                          inquiryForm.firstname.$dirty">First name is a required field</span>
+                        <span class="red-text" ng-show="inquiryForm.firstname.$error.pattern">
+                            Only characters</span>
+                    </div>
 
-                <div class="col-sm-10">
-                    <label for="name">Last name:</label>
-                    <input type="text" name="lastname" maxlength="50"
-                           ng-pattern="last_name" ng-model="lastname" ng-required="true"  class="form-control">
-                  <span class="red-text" 
-                          ng-if="inquiryForm.lastname.$error.required && 
-                          inquiryForm.lastname.$dirty">Last name is a 
-                          required field</span>
-                    <span class="red-text" ng-show="inquiryForm.lastname.$error.pattern">
-                      Only characters</span>
-                </div>
+                    <div class="col-sm-10">
+                        <label for="name">Last name:</label>
+                        <input type="text" name="lastname" maxlength="50" ng-pattern="last_name" ng-model="lastname" ng-required="true" class="form-control">
+                        <span class="red-text" ng-if="inquiryForm.lastname.$error.required && 
+                          inquiryForm.lastname.$dirty">Last name is a required field</span>
+                        <span class="red-text" ng-show="inquiryForm.lastname.$error.pattern">
+                            Only characters</span>
+                    </div>
 
-                <div class="col-sm-10">
-                    <label for="name">Phone number:</label>
-                    <input type="text" name="contact" maxlength="10" 
-                           ng-pattern="ph_numbr" ng-model="contact" id="c_num" 
-                           ng-required="true"  class="form-control">
-                  
-                    <span class="red-text" 
-                          ng-if="inquiryForm.contact.$error.required && 
-                          inquiryForm.contact.$dirty">Contact number is a 
-                          required field</span>
-                    <span class="red-text" ng-show="inquiryForm.contact.$error.pattern">
-                      Please enter a 10 digit number</span>
-                </div>
-                
-                <div class="col-sm-10">
-                    <label for="name">Pizza delivered:</label>
-                    <input   id="today" type="date"  class="form-control" >
-                </div>
+                    <div class="col-sm-10">
+                        <label for="name">Phone number:</label>
+                        <input type="text" name="contact" maxlength="10" ng-pattern="ph_numbr" ng-model="contact" id="c_num" ng-required="true" class="form-control">
+                        <span class="red-text" ng-if="inquiryForm.contact.$error.required && 
+                          inquiryForm.contact.$dirty">Contact number is a required field</span>
+                        <span class="red-text" ng-show="inquiryForm.contact.$error.pattern">
+                            Please enter a 10 digit number</span>
+                    </div>
 
-                <div class="col-sm-10">
-                    <label for="name">Number of pizzas:</label>
-                    <input id="pizzasordered" type="number" value="1" max="10" 
-                           min="1" class="form-control" onKeyDown="return false;"/>
-                </div>
+                    <div class="col-sm-10">
+                        <label for="name">Pizza delivered:</label>
+                        <input id="today" type="datetime-local" ng-required="true" class="form-control" ng-model="deliveredtimedate" required>
+                    </div>
 
-                <div class="col-sm-10">
-                    <button  type="button" id="submit" name="submit" 
-                            class="btn btn-primary pull-left" 
-                            ng-disabled="inquiryForm.$invalid">Order Pizza</button>
-                <div/>
-            </form>
-        </section>
+                    <div class="col-sm-10">
+                        <label for="name">Number of pizzas:</label>
+                        <input id="numberOfPizzas" type="number" value="1" max="10" min="1" class="form-control" ng-model="numberOfPizzas" required/>
+                    </div>
+
+                    <div class="col-sm-10">
+                        <button type="submit" id="submit" name="submit" class="btn btn-primary pull-left" ng-disabled="inquiryForm.$invalid">Order Pizza</button>
+                        <div/>
+                </form>
+            </section>
         </body>
+        </div>
     </div>
-</div>
-<script src="Script.js"></script>
+    <script src="Script.js"></script>
+
 </html>
