--- a/TodoApi/wwwroot/Index.html
+++ b/TodoApi/wwwroot/Index.html
@@ -13,12 +13,12 @@
 <body class="container">
   <div>
     <div id="navigation">
-      <a href="#/Screen1">First Screen</a>
-      <a href="#/Screen2">Second Screen</a>
+      <a href="#/saveOrders">First Screen</a>
+      <a href="#/showOrders">Second Screen</a>
     </div>
     <div ng-view></div>
   </div>
-  <script type="text/javascript" src='./Route.js'></script>
+  <script type="text/javascript" src='./Routes.js'></script>
   <script type="text/javascript" src='./Script1.js'></script>
   <script type="text/javascript" src='./script2.js'></script>
 </body>
