--- a/TodoApi/wwwroot/Index.html
+++ b/TodoApi/wwwroot/Index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 
-<body class="container">
+<body id="Orders" class="container">
   <div>
     <div id="navigation">
       <a href="#/saveOrders">First Screen</a>
@@ -19,8 +19,10 @@
     <div ng-view></div>
   </div>
   <script type="text/javascript" src='./Routes.js'></script>
-  <script type="text/javascript" src='./Script1.js'></script>
-  <script type="text/javascript" src='./script2.js'></script>
+  <script type="text/javascript" src='./controller/GetOrdersController.js'></script>
+  <script type="text/javascript" src='./controller/SaveOrdersController.js'></script>
+  <script type="text/javascript" src='./services/GetOrdersServices.js'></script>
+  <script type="text/javascript" src='./services/SaveOrdersServices.js'></script>
 </body>
 
 </html>
